--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
+
     <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script> -->
-<!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
-</head>
-<body>
+    <!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+  </head>
+  <body>
     <!-- <h1>above root</h1> -->
-    <!-- <script>
-             <div id="root"> namaste react</div>
-    </script> -->
-         <div id="root"> namaste react</div>
+    <script>
+    </script>
+    <div id="root"> namaste react</div>
+    <!-- <div id="root"></div> -->
 
     <!-- <h1>below root</h1> -->
-    
-    <script  type="module" src="App.js"></script>
-</body>
+
+    <script type="module" src="App.js"></script>
+  </body>
 </html>
